--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>myFlix</title>
-  <!-- Link to the SCSS file (Parcel will handle this automatically) -->
-  <link rel="stylesheet" href="./index.scss">
-</head>
-<body>
-  <div id="root"></div>
-  <!-- Do not specify the .jsx file directly; Parcel will bundle everything correctly -->
-  <script type="module" src="./index.jsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MyFlix</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="./index.jsx"></script>
+  </body>
 </html>
