--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyFlix</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="./index.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MyFlix</title>
+
+  <!-- Link to Bootstrap CSS for responsive grid and UI components -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIpg49Q+K5PNTY1F9s58rIu6gfDk8G8gZPz6fX2j2Ygu4zzf64fz2lnh+QzQO9xF" crossorigin="anonymous">
+
+  <!-- Optional Custom CSS for styling -->
+  <style>
+    /* Basic reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    /* Body background and font settings */
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #121212;
+      color: #fff;
+    }
+
+    /* Main container styling */
+    .main-container {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-image: url('https://example.com/movie-background.jpg');
+      background-size: cover;
+      background-position: center;
+      text-align: center;
+      color: white;
+      padding: 40px 20px;
+    }
+
+    .main-container h1 {
+      font-size: 60px;
+      font-weight: bold;
+      letter-spacing: 3px;
+      margin-bottom: 20px;
+      color: #ffcc00;
+    }
+
+    .main-container p {
+      font-size: 22px;
+      max-width: 700px;
+      margin-bottom: 40px;
+    }
+
+    .cta-buttons {
+      display: flex;
+      gap: 30px;
+      justify-content: center;
+      margin-top: 20px;
+    }
+
+    .cta-buttons a {
+      padding: 12px 30px;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+      color: #fff;
+      background-color: #ffcc00;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+
+    .cta-buttons a:hover {
+      background-color: #e6a800;
+    }
+
+    /* Footer styling */
+    footer {
+      background-color: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Main container section -->
+  <div class="main-container">
+    <h1>Welcome to MyFlix</h1>
+    <p>Discover the latest and greatest movies and TV shows. Watch, stream, and enjoy content from around the world at any time, anywhere.</p>
+
+    <div class="cta-buttons">
+      <a href="#">Sign Up</a>
+      <a href="#">Explore Movies</a>
+    </div>
+  </div>
+
+  <!-- Footer section -->
+  <footer>
+    <p>&copy; 2024 MyFlix. All rights reserved.</p>
+  </footer>
+
+  <!-- Link to Bootstrap JS and Popper.js (for responsive components) -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy8D6P5h7gpS6a1jMmj7c5bX5O5w39yC5gYdYsxx" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0V5t9ffPvc3o6xdy0I8J0zqRzKoxnCblYZfRPGbNf3B7t7Xp" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-TX8t27TyzzD5Pq8bm/j6fJkzCQUlN8dbrd/6Q8Wqlu7+JURp4h7+w+d7vcW1gVRf" crossorigin="anonymous"></script>
+
+  <!-- Link to React JS (index.jsx) -->
+  <script type="module" src="./index.jsx"></script>
+</body>
+
 </html>
